✨ release new branch, add option 'forceNoVideo'

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
       Handle Partial (reloads player)
     </label>
     <label>
+      <input id='force-no-video' type="checkbox">
+      Force No Video (reloads player, Only for TS streams)
+    </label>
+    <label>
       <input id=llhls type="checkbox">
       [EXPERIMENTAL] Enables support for ll-hls (reloads player)
     </label>
